# android_bazel

./: .bazelrc  .gitignore  BAZEL_MIGRATION.md  BAZEL_MIGRATION_GUIDE.md  BAZEL_STATUS.md  BUILD.bazel  README.md  WORKSPACE  build.gradle.kts  gradle.properties  gradlew  settings.gradle.kts
app/: BUILD.bazel  build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/notekeeper/: MainActivity.kt  NoteKeeperApplication.kt
app/src/main/java/com/example/notekeeper/data/model/: Note.kt
app/src/main/java/com/example/notekeeper/data/repository/: NoteRepository.kt  NoteRepositoryImpl.kt
app/src/main/java/com/example/notekeeper/di/: AppModule.kt
app/src/main/java/com/example/notekeeper/ui/: NoteViewModel.kt
app/src/main/java/com/example/notekeeper/ui/navigation/: NavGraph.kt
app/src/main/java/com/example/notekeeper/ui/screens/: AddNoteScreen.kt  NoteListScreen.kt
app/src/main/java/com/example/notekeeper/ui/theme/: Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
