# Root BUILD file for NoteKeeper

load("@rules_kotlin//kotlin:core.bzl", "kt_compiler_plugin", "kt_ksp_plugin")
load("@rules_jvm_external//:defs.bzl", "artifact")

# Make this a package
exports_files(["WORKSPACE"])

# Compose Compiler Plugin for Kotlin 2.1.0
# Note: In Kotlin 2.0+, Compose compiler is built-in, but we still configure it
kt_compiler_plugin(
    name = "compose_plugin",
    id = "org.jetbrains.kotlin.plugin.compose",
    visibility = ["//visibility:public"],
)

# KSP Plugin for Hilt/Dagger
kt_ksp_plugin(
    name = "hilt_android_ksp",
    processor_class = "dagger.hilt.processor.internal.root.RootProcessor",
    generates_java = True,
    visibility = ["//visibility:public"],
    deps = [
        artifact("com.google.dagger:hilt-compiler"),
        artifact("com.google.dagger:hilt-android-compiler"),
    ],
)

# KSP Plugin for Dagger
kt_ksp_plugin(
    name = "dagger_ksp",
    processor_class = "dagger.internal.codegen.KspComponentProcessor",
    generates_java = True,
    visibility = ["//visibility:public"],
    deps = [
        artifact("com.google.dagger:dagger-compiler"),
    ],
)
