load("@io_bazel_rules_kotlin//kotlin:android.bzl", "kt_android_library")
load("@build_bazel_rules_android//android:rules.bzl", "android_binary", "android_library")

# Kotlin Android Library for the app sources with Hilt
kt_android_library(
    name = "notekeeper_lib",
    srcs = glob([
        "src/main/java/**/*.kt",
    ]),
    custom_package = "com.example.notekeeper",
    manifest = "src/main/AndroidManifest.xml",
    resource_files = glob(["src/main/res/**"]),
    plugins = [
        "//:compose_plugin",
    ],
    deps = [
        "//:hilt-android",
        "@maven//:org_jetbrains_kotlin_kotlin_stdlib",
        "@maven//:org_jetbrains_kotlinx_kotlinx_coroutines_core",
        "@maven//:org_jetbrains_kotlinx_kotlinx_coroutines_android",
        "@maven//:androidx_compose_runtime_runtime",
        "@maven//:androidx_compose_ui_ui",
        "@maven//:androidx_compose_ui_ui_graphics",
        "@maven//:androidx_compose_ui_ui_tooling_preview",
        "@maven//:androidx_compose_foundation_foundation",
        "@maven//:androidx_compose_material3_material3",
        "@maven//:androidx_compose_material_material_icons_extended",
        "@maven//:androidx_core_core_ktx",
        "@maven//:androidx_lifecycle_lifecycle_runtime_ktx",
        "@maven//:androidx_lifecycle_lifecycle_viewmodel_compose",
        "@maven//:androidx_activity_activity_compose",
        "@maven//:androidx_navigation_navigation_compose",
        "@maven//:androidx_hilt_hilt_navigation_compose",
        "@maven//:javax_inject_javax_inject",
    ],
    visibility = ["//visibility:private"],
)

# Android Binary APK
android_binary(
    name = "notekeeper",
    custom_package = "com.example.notekeeper",
    manifest = "src/main/AndroidManifest.xml",
    manifest_values = {
        "minSdkVersion": "24",
        "targetSdkVersion": "35",
        "versionCode": "1",
        "versionName": "1.0",
    },
    deps = [":notekeeper_lib"],
    visibility = ["//visibility:public"],
)

# Debug APK
android_binary(
    name = "notekeeper_debug",
    custom_package = "com.example.notekeeper",
    debug_key = "//app:debug.keystore",
    manifest = "src/main/AndroidManifest.xml",
    manifest_values = {
        "minSdkVersion": "24",
        "targetSdkVersion": "35",
        "versionCode": "1",
        "versionName": "1.0-debug",
    },
    deps = [":notekeeper_lib"],
    visibility = ["//visibility:public"],
)
